--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,8 @@ span {
 
 @media screen and (min-width : 820px) {
     .container {
-        width: 900px;
-        height: 700px;
+        width: 100%;
+        height: 900px;
         margin: 50px auto;
         background: url(../images/pattern-background-desktop.svg) no-repeat;
         background-position: top;
@@ -135,10 +135,17 @@ span {
     }
 
     .dancer {
-        width: 300px;
+        width: 350px;
+        height: 150px;
+
     }
 
     .content {
-        width: 300px;
+        width: 350px;
+        height: 500px;
+    }
+
+    .content p {
+        font-size: 16px;
     }
 }
